# virtual-repo-hub

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs  main.rs
src/test/: mod.rs  repo_gen.rs
tests/: repo_gen_tests.rs  repo_status.rs
tests/repo_gen/: mod.rs
tests/repo_status/: bare.yaml  clean.yaml  idx_dirty.yaml  new_remote.yaml
