[package]
name = "virtual-repo-hub"
version = "0.1.0"
authors = ["dxenonb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_yaml = "0.8.11"
tempfile = "3.1.0"

[dependencies]
serde = { version = "1.0.104", features = [ "derive" ] }
git2 = "0.10"
